Changes: Whitespace fixes.

--- a/base/meegotouch/libmeegotouchviews/style/mlistitemstyle.css
+++ b/base/meegotouch/libmeegotouchviews/style/mlistitemstyle.css
@@ -1,9 +1,9 @@
 /* MGridItemStyle : MGridItemStyle */
-MListItemStyle {    
+MListItemStyle {
 
     background-tiles: meegotouch-list-background $CORNER_MARGINS;
-    background-image: ;
-    background-color: ;
+    background-image: none;
+    background-color: none;
 
     background-color: $COLOR_BACKGROUND;
     background-opacity: 1.0;
@@ -19,7 +19,7 @@ MListItemStyle {
     down-state-effect: "MGraphicsHighlightEffect";
 }
 
-MListItemStyle:selected {        
+MListItemStyle:selected {
     background-tiles : meegotouch-list-background-selected 10px 10px 10px 10px;
 
     background-color: $COLOR_INVERTED_FOREGROUND;
@@ -28,7 +28,7 @@ MListItemStyle:selected {
 
 MListItemStyle:pressed {
     background-tiles : meegotouch-list-background-pressed 10px 10px 10px 10px;
-    
+
     background-color: $COLOR_INVERTED_FOREGROUND;
     background-opacity: 1.0;
 }
